--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ button {
 
 #sidebar {
 	display: grid;
-	grid-template: .5fr 3fr .5fr 1.5fr 1.5fr / 1fr;
+	grid-template: 1fr 3fr .5fr 1.5fr 1.5fr / 1fr;
 	background-color: #45503B;
 	grid-area: 1 / 1 / 3 / 2;
 	color: white;
@@ -113,8 +113,24 @@ button {
 
 }
 
+#sidebar-heading {
+	display: grid;
+	grid-template: 1fr 1fr / 1fr 3fr;
+}
+
+#logo-icon {
+	grid-area: 1 / 1 / 2 / 2;
+	filter: invert(100%);	
+	height: 50px;
+	width: 50px;
+	justify-self: center;
+
+}
+
 #dashboard {
-	grid-area: 1 / 1 / 2 / 4;
+	grid-area: 1 / 2 / 2 / 5;
+	align-self: center;
+	
 }
 
 #sidebar-menu-top {rid;
